files from atmel studio added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # George
 .vscode
 build/
+#felix Atmel
+Debug/  
+GccApplication1.componentinfo.xml
+GccApplication1.cproj
+ext_memory.c
+include/ext_memory.h
