chore(Makefile): Refactor the Makefile and fix typo

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # George
 .vscode
-build/
+atmega-162/build
+arduino-due/build
+arduino-due/sam
 #felix Atmel
 Debug/  
 GccApplication1.componentinfo.xml
